--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-validation": "^0.1.11",
+    "gh-pages": "^3.1.0",
     "react-dom": "^17.0.1",
     "react-intl": "^4.0.0",
     "react-particles-js": "^3.4.1",
