--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webportfolio",
-  "homepage": "https://github.com/roncy12/Web-Portfolio.git",
+  "homepage": "https://roncy12.github.io/Web-Portfolio.git",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
